applications/openeuler-reproducible/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: openeuler-reproducible
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: website
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: openeuler-reproducible
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: server
  type: ClusterIP
