applications/openeuler-reproducible/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: openeuler-reproducible-ingress
  namespace: openeuler-reproducible
spec:
  tls:
    - hosts:
        - reproducible-builds.openeuler.org
      secretName: openeuler-org-tls
  rules:
    - host: reproducible-builds.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-service
              servicePort: 8080
            path: /
